# yt-dlp-api

./: .cursorrules  .dockerignore  .flake8  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-ytdlp.txt  requirements.txt
.archive/: HANDOFF_kiro_to_claude_2025-12-02.md
.claude/: CLAUDE.md  settings.local.json
.gemini/: config.yaml  styleguide.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/codex/: codex-output-schema.json  review-prompt.md
.github/workflows/: ci.yml  codex-review.yml  docker-publish.yml  gemini-review.yml
.kiro/specs/yt-dlp-rest-api/: design.md  requirements.md  tasks.md
.kiro/steering/: documentation-policy.md  git-workflow.md  python-venv-requirement.md
.s2s/: BACKLOG.md  CONTEXT.md  README.md  config.yaml  ideas.md
.s2s/decisions/: 0001-ytdlp-as-subprocess.md  0002-provider-abstraction.md  0003-in-memory-jobs.md  0004-token-bucket-rate-limiting.md  0005-test-mode-mock-executor.md  0006-ci-gates-and-ghcr.md  0007-transcripts-from-subtitles.md
app/: __init__.py  main.py
app/api/: __init__.py  admin.py  download.py  health.py  jobs.py  metrics.py  schemas.py  transcript.py  video.py
app/core/: checks.py  config.py  errors.py  logging.py  metrics.py  rate_limiter.py  resources.py  startup.py  template.py  validation.py
app/middleware/: __init__.py  auth.py  rate_limit.py
app/models/: __init__.py  job.py  video.py
app/providers/: __init__.py  base.py  exceptions.py  manager.py  youtube.py
app/services/: __init__.py  cookie_service.py  download_queue.py  download_worker.py  job_service.py  storage.py  webhook_service.py
app/testing/: __init__.py  fixtures.py  mock_ytdlp.py
app/utils/: cookies.py  transcript.py
docs/: CI_MYPY_FIX.md  DEVELOPMENT_SETUP.md  QUALITY_TOOLS.md
scripts/: check_privacy.sh  docker_smoke.sh  verify_setup.sh
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_download_workflow.py  test_error_scenarios.py  test_metrics.py  test_transcript.py
tests/integration/: test_app.py
tests/unit/: test_admin_api.py  test_api_endpoints.py  test_auth.py  test_config.py  test_cookie_exec_copy.py  test_cookie_service.py  test_download_queue.py  test_download_worker.py  test_job_service.py  test_logging.py  test_monitoring.py  test_provider_manager.py  test_rate_limiter.py  test_resources.py  test_security.py  test_startup.py  test_storage.py  test_template.py  test_transcript_utils.py  test_validation.py  test_webhook_service.py  test_youtube_provider.py
