[project]
name = "ytdlp-api"
version = "1.0.0"
description = "REST API backend for yt-dlp video downloads and metadata extraction"
authors = [
    {name = "YT-DLP API Team"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/yourusername/ytdlp-api"
Documentation = "https://github.com/yourusername/ytdlp-api/docs"
Repository = "https://github.com/yourusername/ytdlp-api"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=app --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
