[project]
name = "ytdlp-api"
version = "1.0.0"
description = "REST API backend for yt-dlp video downloads and metadata extraction"
authors = [
    {name = "YT-DLP API Team"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi==0.109.1",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "structlog==24.1.0",
    "prometheus-client==0.23.1",
    "pyyaml==6.0.1",
    "cachetools==5.3.2",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-mock==3.12.0",
    "pytest-cov==4.1.0",
    "httpx==0.26.0",
    # Code formatting
    "black==24.3.0",
    "isort==5.13.2",
    # Linting
    "flake8==7.0.0",
    "flake8-bugbear==24.1.17",
    "flake8-comprehensions==3.17.0",
    "flake8-simplify==0.21.0",
    "flake8-docstrings==1.7.0",
    "pep8-naming==0.15.1",
    # Type checking
    "mypy==1.8.0",
    "types-PyYAML==6.0.12.12",
    "types-cachetools==5.3.0.7",
    # Security
    "bandit==1.7.7",
    # Pre-commit
    "pre-commit==3.6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ytdlp-api"
Documentation = "https://github.com/yourusername/ytdlp-api/docs"
Repository = "https://github.com/yourusername/ytdlp-api"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# ============================================================================
# Testing Configuration
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests with test mode",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "app/main.py",  # Entry point, tested via integration tests
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ============================================================================
# Code Formatting
# ============================================================================

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | env
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [
    ".git",
    ".venv",
    "venv",
    "env",
    "__pycache__",
    ".pytest_cache",
    "build",
    "dist",
]
known_first_party = ["app", "tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ============================================================================
# Linting
# ============================================================================

[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E203",  # Whitespace before ':' (conflicts with Black)
    "E501",  # Line too long (handled by Black)
    "W503",  # Line break before binary operator (conflicts with Black)
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "env",
    ".pytest_cache",
    "build",
    "dist",
    "*.egg-info",
]
per-file-ignores = [
    "__init__.py:F401,D103",
    "tests/*:D103,S101",
]
docstring-convention = "google"
max-complexity = 10

# ============================================================================
# Type Checking
# ============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
check_untyped_defs = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
disable_error_code = ["arg-type", "union-attr", "operator", "misc"]

[[tool.mypy.overrides]]
module = "prometheus_client"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prometheus_client.*"
ignore_missing_imports = true

# ============================================================================
# Security
# ============================================================================

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "env",
]
skips = [
    "B101",  # assert_used - we use asserts in tests
]
